# ai-migrate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
projects/mini/: tools.py
src/ai_migrate/: __init__.py  cli.py  context.py  eval_generator.py  example_selector.py  examples.py  fake_llm_client.py  manifest.py  migrate.py  migrate.py.bak  pr_utils.py  progress.py  projects.py  run_eval.py  s3_uploader.py  sample_manifest.py  test_eval_generator.py  test_manifest.py  test_migrate.py  test_resolve_symbols.py  utils.py
src/ai_migrate/llm_providers/: __init__.py  base.py  openai.py
src/ai_migrate/storage/: __init__.py  config.py  config_loader.py  local.py
src/ai_migrate/test/: test_eval_generator.py  test_manifest.py  test_migrate.py
src/ai_migrate/test/eval_test_data/: response1.txt
src/ai_migrate/test/storage/: test_config.py  test_config_loader.py  test_storage.py
src/ai_migrate/tools/: kotlin_symbols.py
