[project]
name = "ai-migrate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "black",
    "fire",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "pytest",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
ai-migrate = "ai_migrate.cli:main"
ai-migrate-eval = "ai_migrate.run_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
